fixed: hidden part is no longer visible under any conditions

--- a/src/products/product-item/style.module.scss
+++ b/src/products/product-item/style.module.scss
@@ -13,7 +13,7 @@
 
   .title {
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     max-width: 150px;
 
     display: -webkit-box;
